--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,8 +5,8 @@ on:
   pull_request:
     branches: [main]
 jobs:
-  test:
-    timeout-minutes: 60
+  ui-tests:
+    timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
