feat: update reporters Local and CD/CI

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test:ui:all:showHtmlReport": "playwright test && npx playwright show-report",
     "test:ui:all:showHtmlReport:headed": "playwright test --headed && npx playwright show-report",
-    "test:ui:all:showIndentListReport": "playwright test --reporter=indent-list-reporter",
     "test:ui:chromium": "playwright test --project=chromium",
     "test:ui:firefox": "playwright test --project=firefox",
     "test:ui:webkit": "playwright test --project=webkit"
@@ -25,7 +24,6 @@
   "homepage": "https://github.com/Miguel-Barca/todo-mvc-playwright#readme",
   "devDependencies": {
     "@playwright/test": "^1.54.1",
-    "@types/node": "^24.1.0",
-    "indent-list-reporter": "^1.1.1"
+    "@types/node": "^24.1.0"
   }
 }
